--- a/_variables.scss
+++ b/_variables.scss
@@ -1,1 +1,7 @@
-$header-color: rgb(1, 103, 255);
+$header-color: #2264D1;
+$icon-star-color: #FB8200;
+$sub_header-color: #787885;
+$text-color: #19191D;
+$background-btn-color: #EBF2FF;
+$background-btn-saleoff-color: #C23564;
+$background-seach: #EDEDF0;
